--- a/src/ProductBundle/Resources/config/routing.yml
+++ b/src/ProductBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
 product_homepage:
     path:     /
     defaults: { _controller: ProductBundle:Default:index }
+
+# ******************************** WORKSHOP *********************************
+product_workshop:
+    resource: "@ProductBundle/Resources/config/routing/workshop.yml"
+    prefix:   /workshops
+
