--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
     - { resource: "@PrestationBundle/Resources/config/services.yml" }
     - { resource: "@OrderBundle/Resources/config/services.yml" }
     - { resource: "@ProductBundle/Resources/config/services.yml" }
+    - { resource: "@EventBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
