--- a/src/OrderBundle/Resources/config/services.yml
+++ b/src/OrderBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    order.example:
 #        class: OrderBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+
+    setNewReference:
+        class: OrderBundle\Service\ReferenceBuilder
+        arguments: [  '@security.context' , '@doctrine.orm.entity_manager' ]
