--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
+fos_user:
+    resource: "@UserBundle/Resources/config/routing/fosuser.yml"
+
 event:
     resource: "@EventBundle/Resources/config/routing.yml"
     prefix:   /
