--- a/src/PrestationBundle/Resources/config/services.yml
+++ b/src/PrestationBundle/Resources/config/services.yml
@@ -3,3 +3,6 @@ services:
 #        class: PrestationBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
 
+    prestation.manager_activity:
+        class: PrestationBundle\Manager\ActivityManager
+        arguments: ["@service_container"]
