--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-user_homepage:
-    path:     /
-    defaults: { _controller: UserBundle:Default:index }
+# ******************************** USER *********************************
+user_technician:
+    resource: "@UserBundle/Resources/config/routing/user.yml"
+    prefix:   /technicians
