--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,8 +3,8 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN:       ROLE_USER, ROLE_CLIENT, ROLE_WORKER, ROLE_PARTNER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH
 
     providers:
         fos_userbundle:
