--- a/src/EventBundle/Resources/config/routing.yml
+++ b/src/EventBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-event_homepage:
-    path:     /
-    defaults: { _controller: EventBundle:Default:index }
+# ******************************** EVENT *********************************
+event_event:
+    resource: "@EventBundle/Resources/config/routing/event.yml"
+    prefix:   /events
