--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "^2.0",
+        "guzzle/plugin-history": "^3.9",
         "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
