--- a/src/ProductBundle/Resources/config/api/workshop.yml
+++ b/src/ProductBundle/Resources/config/api/workshop.yml
@@ -4,7 +4,7 @@ api_product_workshop_new:
     methods: POST
 
 api_product_workshop_show:
-    path:     /workshops/{nickname}
+    path:     /workshops/{id}
     defaults: { _controller: ProductBundle:Api/Workshop:show }
     methods: GET
 
